# iris_study

./: .gitignore  CONCLUSOES.md  RESUMO.md  pyproject.toml
notebooks/01_exploration/: 01_eda_dengue_hospitalized.ipynb
notebooks/03_models/: ensemble.ipynb  lightgbm.ipynb  logistic_regression.ipynb  logistic_regression_smote.ipynb  mlp.ipynb  random_forest.ipynb  xgboost.ipynb
notebooks/04_validation/: bootstrap_ic.ipynb  bootstrap_viz.ipynb  calibracao.ipynb  comparacao_modelos.ipynb  lr_uf_encoding_comparison.ipynb  validacao_2025.ipynb
notebooks/05_interpretation/: shap_explicabilidade.ipynb
utils/: balance_data.py  clean_data.py  download_data.py  split_data.py  treat_data.py
