[project]
name = "iris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "graphviz>=0.21",
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numba>=0.65.0",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "pysus[datasus]>=1.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "xgboost>=3.2.0",
]
